--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 beautifulsoup4==4.6.0
 certifi==2018.4.16
 chardet==3.0.4
+click==6.7
 cssselect==1.0.3
 cycler==0.10.0
 feedfinder2==0.0.4
 feedparser==5.2.1
+Flask==1.0.2
 idna==2.7
+itsdangerous==0.24
 jieba3k==0.35.1
+Jinja2==2.10
 kiwisolver==1.0.1
 lxml==4.2.2
+MarkupSafe==1.0
 matplotlib==2.2.2
 newspaper3k==0.2.6
 nltk==3.3
@@ -24,3 +29,4 @@ six==1.11.0
 tldextract==2.2.0
 Unidecode==1.0.22
 urllib3==1.23
+Werkzeug==0.14.1
